Import articles when we add a new feed
and tweak model definition
